# datagrowth

./: .cursorrules  .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  Makefile  README.md  dependencies.txt  distribute.md  docker-compose.yml  index.html  invoke.yml  pyproject.toml  pyrightconfig.fixed.json  pytest.ini  requirements.txt  setup.cfg  setup.py  tasks.py  tox.ini  versions.json
.github/workflows/: docs.yml  lint.yml  mariadb.yml  mysql.yml  postgres.yml  tests.yml
0.20.7/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
0.20.7/_static/: documentation_options.js
0.20.7/configuration/: index.html  reference.html
0.20.7/processors/: custom.inc.html  index.html  input.inc.html  reference.html
0.20.7/resources/: configuration.inc.html  http.inc.html  index.html  reference.html  shell.inc.html  usage.inc.html
0.20.7/utils/: index.html  reference.html
0.21.1/: .buildinfo  genindex.html  index.html  py-modindex.html  reference.html  search.html
0.21.1/configuration/: reference.html
0.21.1/processors/: custom.inc.html  index.html  input.inc.html
0.21.1/resources/: configuration.inc.html  http.inc.html  index.html  reference.html  shell.inc.html  usage.inc.html
0.21.1/utils/: index.html
0.21.2/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
0.21.2/configuration/: index.html  reference.html
0.21.2/processors/: custom.inc.html  index.html  input.inc.html  reference.html
0.21.2/resources/: configuration.inc.html  http.inc.html  index.html  reference.html  shell.inc.html  usage.inc.html
0.21.2/utils/: index.html  reference.html
commands/: bundling.py  documentation.py  testing.py  utils.py
core/: exceptions.py
core/fixtures/: city-celebrities-24-11-2014.json.REMOVED.git-id
core/processors/: base.py  extraction.py  mixins.py
core/tests/: tests.py
core/views/: __init__.py
datagrowth/: __init__.py  admin.py  apps.py  datagrowth.yml  exceptions.py  protocols.py  settings.py  signatures.py  tags.py  version.py
datagrowth/configuration/: __init__.py  configs.py  defaults.py  fields.py  loaders.py  serializers.py  types.py
datagrowth/datatypes/: __init__.py  admin.py  storage.py  types.py
datagrowth/django/: apps.py  fields.py  processors.py
datagrowth/management/: base.py
datagrowth/processors/: __init__.py  base.py  growth.py
datagrowth/registry/: __init__.py  types.py
datagrowth/resources/: __init__.py  admin.py  base.py  protocols.py  pydantic.py  testing.py  utils.py
datagrowth/utils/: __init__.py  data.py  datetime.py  io.py  iterators.py  tasks.py
docs/: Makefile  conf.py  index.rst  reference.rst
docs/_static/: version-switcher.js
docs/configuration/: defaults.rst.inc  defaults_legacy.rst.inc  fields.rst.inc  serializers.rst.inc
docs/processors/: index.rst  input.inc.rst
latest/: genindex.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
requirements/: dependencies.txt  development.txt  django.txt
tests/: datagrowth.yml  test_tags.py
v1/: manifest.yml
(+361 files in other folders)
