[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datagrowth"
dynamic = ["version"]
description = "Data engineering tools to create data mash ups using Django"
maintainers = [
    {name = "Fako Berkers", email = "email@fakoberkers.nl"}
]
authors = [
    {name = "Fako Berkers", email = "email@fakoberkers.nl"}
]
readme = "README.md"
requires-python = "~=3.12"
license = "LGPL-3.0-only"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django :: 5.2",
    "Operating System :: OS Independent",
]
dependencies = [
    "Django>=5.2",
    "celery",
    "jsonschema>=4.20.0",
    "lxml",
    "beautifulsoup4",
    "urlobject",
    "requests",
    "Pillow>=11",
    "tqdm",
    "invoke",
]

[project.urls]
"Homepage" = "https://github.com/fako/datagrowth"
"Bug Tracker" = "https://github.com/fako/datagrowth/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["datagrowth*"]
namespaces = false
exclude = ["tests*", "docs*", "venv*", "mvenv*", "build*", "dist*", "requirements*", "commands*"]

[tool.setuptools.package-data]
datagrowth = ["datagrowth.yml"]

[tool.setuptools.dynamic]
version = {attr = "datagrowth.version.VERSION"}

[tool.basedpyright]
typeCheckingMode = "standard"
reportMissingImports = "none"
reportMissingModuleSource = "none"
exclude = [
    # Python files that are not part of this library
    "build",
    "dist",
    ".venv",
    "venv",
    "mvenv",
    ".tox",
    # Temporary excludes for sanity
    "tests",
    "datagrowth/datatypes"
]
